# pxlfmt

./: CHANGELOG.md  Cargo.toml  Justfile  README.md
.github/workflows/: docs.yml
src/: core.rs  formats.rs  internal.rs  lib.rs  pixel.rs  prelude.rs  raw.rs  uint.rs
src/formats/: rgba.rs
src/formats/rgba/: abgr8888.rs  float_rgba.rs  rgba8888.rs
src/pixel/: raw.rs
src/pixel/raw/: f32x4.rs  u32x8888.rs
