[package]
name = "pxlfmt"
edition = "2024"
license = "MIT"

description = "Pixel formats and manipulation"
repository = "https://github.com/crates-lurey-io/pxlfmt"
version = "0.2.0"

[lints.clippy]
pedantic = "deny"

[workspace]
members = ["tools/cargo-bin"]

[workspace.metadata.bin]
cargo-nextest = { version = "0.9.98", locked = true }
cargo-llvm-cov = { version = "0.6.16", locked = true }
just = { version = "1.40.0" }
taplo-cli = { version = "0.10.0", bins = ["taplo"] }
